--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_executable(C_programming
         problem_6.c
         problem_7.c
         problem_8.c
-        problem_9.c)
+        problem_9.c
+        problem_18.c)
