program to check N prime number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,5 @@ add_executable(C_programming
         problem_7.c
         problem_8.c
         problem_9.c
-        problem_18.c)
+        problem_18.c
+        prime_number.c)
