simple and compound interest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,5 @@ add_executable(C_programming
         problem_8.c
         problem_9.c
         problem_18.c
-        prime_number.c)
+        prime_number.c
+        simple_and_compund_interest.c)
