--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,5 @@ add_executable(C_programming
         prime_number.c
         simple_and_compund_interest.c
         leap_year.c
-        positive_or_negetive.c)
+        positive_or_negetive.c
+        large_number.c)
