--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,4 +27,5 @@ add_executable(C_programming
         leap_year.c
         positive_or_negetive.c
         large_number.c
-        odd_or_even.c)
+        odd_or_even.c
+        diamon_pattern.c)
