--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,4 @@ add_executable(C_programming
         odd_or_even.c
         diamon_pattern.c
         palindrome.c
-        .github/hello_n_numberOf_times.c)
+        hello_n_numberOf_times.c)
